<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment1 - Email App</string>
    <string name="sender">From</string>
    <string name="receiver">To</string>
    <string name="multipleReceiver">Cc</string>
    <string name="multipleHiddenReceiver">Bcc</string>
    <string name="action_settings">Settings</string>
    <string name="subject">Subject</string>
    <string name="emailBody">Body</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonSend">Send</string>
    <string name="buttonBack">Back</string>
    <string name="title_activity_email_reading">EmailReadingActivity</string>

</resources>
