<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emailCompositionLayout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/senderTextField"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/sender"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/ReceiverTextField"
        android:layout_gravity="top"
        android:hint="@string/receiver"
        android:layout_below="@+id/senderTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/MultipleReceiverTextField"
        android:hint="@string/multipleReceiver"
        android:layout_gravity="top"
        android:layout_below="@+id/ReceiverTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/multipleHiddenReceiverTextView"
        android:hint="@string/multipleHiddenReceiver"
        android:layout_gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MultipleReceiverTextField" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/emailBodyTextView"
        android:layout_gravity="center_horizontal"
        android:hint="@string/emailBody"
        android:gravity="top"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/emailBodyTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="clearContent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSend"
        android:id="@+id/buttonSend"
        android:layout_gravity="right"
        android:layout_below="@+id/emailBodyTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sendEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:id="@+id/editText"
        android:hint="@string/subject"
        android:gravity="top"
        android:layout_below="@+id/multipleHiddenReceiverTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>